--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,13 @@ url: "https://your-github-username.github.io"
 baseurl: ""
 repository: your-username/bft-ai2025-site
 
-theme: minimal-mistakes-jekyll
+#theme: minimal-mistakes-jekyll
+remote_theme: "mmistakes/minimal-mistakes"
 plugins:
   - jekyll-include-cache
+  - jekyll-remote-theme
+  - jekyll-include-cache
+
 
 markdown: kramdown
 kramdown:
