Added banner and sidebar.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,16 @@ main:
     url: /cfp/
   - title: "Program"
     url: /program/
-  - title: "Speakers"
-    url: /speakers/
-  - title: "Organizers"
-    url: /organizers/
+  - title: "Committees"
+    url: /committees/
+  - title: "Submission"
+    url: /submission/
+
+important-dates:
+  - title: "(All deadlines are at 23:59 AOE)"
+    children:
+      - title: "**Paper Submission:** July 4, 2025"
+      - title: "**Author Notification:** July 25, 2025"
+      - title: "**Camera-ready Deadline:** July 31, 2025"
+      - title: "**Workshop Date:** September 29, 2025"
+
