--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,11 +10,11 @@ main:
   - title: "Submission"
     url: /submission/
 
-important-dates:
-  - title: "(All deadlines are at 23:59 AOE)"
-    children:
-      - title: "**Paper Submission:** July 4, 2025"
-      - title: "**Author Notification:** July 25, 2025"
-      - title: "**Camera-ready Deadline:** July 31, 2025"
-      - title: "**Workshop Date:** September 29, 2025"
+#important-dates:
+#  - title: "(All deadlines are at 23:59 AOE)"
+#    children:
+#      - title: "**Paper Submission:** July 4, 2025"
+#      - title: "**Author Notification:** July 25, 2025"
+#      - title: "**Camera-ready Deadline:** July 31, 2025"
+#      - title: "**Workshop Date:** September 29, 2025"
 
